--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   intl: ^0.18.0
+  loading_animation_widget: ^1.2.0+4
 
 dev_dependencies:
   flutter_test:
