--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.0.5
   intl: ^0.18.0
   loading_animation_widget: ^1.2.0+4
+  top_snackbar_flutter: ^3.0.0+1
 
 dev_dependencies:
   flutter_test:
