--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   match: ^0.4.1
   auto_size_text: ^3.0.0
   shared_preferences: ^2.0.17
+  validatorless: ^1.2.3
+  json_annotation: ^4.6.0
   
 
 dev_dependencies:
@@ -61,6 +63,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.3.3
   match_generator: ^0.4.1
+  json_serializable: ^6.3.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
