--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,13 +42,14 @@ dependencies:
   loading_animation_widget: ^1.2.0+4
   top_snackbar_flutter: ^3.0.0+1
   bloc: ^8.1.1
-  flutter_bloc: ^8.1.1
   equatable: ^2.0.5
   match: ^0.4.1
   auto_size_text: ^3.0.0
   shared_preferences: ^2.0.17
   validatorless: ^1.2.3
   json_annotation: ^4.6.0
+  flutter_bloc: ^8.1.2
+  flutter_awesome_select: ^6.5.0
   
 
 dev_dependencies:
